ingress-nginx/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
    - host: blue.nginx-ingress.com.br
      http:
        paths:
        - backend:
            serviceName: blue-service
            servicePort: 80

    - host: green.nginx-ingress.com.br
      http:
        paths:
        - backend:
            serviceName: green-service
            servicePort: 80
