ingress-nginx/ingress-paths.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nginx-ingress.com.br
      http:
        paths:
          - path: /green
            backend:
              serviceName: green-service
              servicePort: 80
          - path: /blue
            backend:
              serviceName: blue-service
              servicePort: 80
