ingress-nginx/ingress-simples.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-simples
spec:
  backend:
    serviceName: blue-service
    servicePort: 80
